--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h2>E commerce</h2>
+        <nav>
+            <a href="/products">Home</a>
+            <a href="/cart">Carrito</a>
+        </nav>
+    </header>
     {{{body}}}
 </body>
 </html>
