--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header>
         <h2>E commerce</h2>
         <nav>
-            <a href="/products">Home</a>
-            <a href="/cart">Carrito</a>
+            <a href="/products" class="icon-btn"><i class="bi bi-house"></i></a>
+            <a href="/cart" class="icon-btn"><i class="bi bi-bag"></i></a>
         </nav>
     </header>
     {{{body}}}
